--- a/SecondGame/SecondGame.csproj
+++ b/SecondGame/SecondGame.csproj
@@ -75,6 +75,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BuildManager.cs" />
+    <Compile Include="Assets\Node.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\Scripts\Turret.cs" />
