--- a/SecondGame/SecondGame.csproj
+++ b/SecondGame/SecondGame.csproj
@@ -75,6 +75,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\MoneyUI.cs" />
     <Compile Include="Assets\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\BuildManager.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
