--- a/SecondGame/SecondGame.csproj
+++ b/SecondGame/SecondGame.csproj
@@ -75,6 +75,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\GameManager.cs" />
+    <Compile Include="Assets\LivesUI.cs" />
     <Compile Include="Assets\MoneyUI.cs" />
     <Compile Include="Assets\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\BuildManager.cs" />
